fixed link js file

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
 
   <!-- model -->
-  <script src="../models/SinhVien.js"></script>
+  <script src="./models/SinhVien.js"></script>
   
   <!-- service -->
-  <script src="../services/SinhVienService.js"></script>
+  <script src="./services/SinhVienService.js"></script>
 
   <!-- controllers -->
-  <script src="../controllers/index.js"></script>
+  <script src="./controllers/index.js"></script>
 
 </body>
 
